CMBSandbox4/src/objects/Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Intervals__c</fullName>
        <label>Billing Intervals</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Structure__c</fullName>
        <label>Billing Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Per User Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <inlineHelpText>Date purchased</inlineHelpText>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Record_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Associated Login record</inlineHelpText>
        <label>Login</label>
        <referenceTo>Login__c</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost_Per_User__c</fullName>
        <label>Monthly Cost Per User</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Cost__c</fullName>
        <label>Total Monthly Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pmt_Method__c</fullName>
        <label>Pmt Method</label>
        <picklist>
            <picklistValues>
                <fullName>Amex 1003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amex 1016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chase Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paychex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickPay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Optional, this will link the expense with the vendor account in salesforce</inlineHelpText>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Expenses</relationshipLabel>
        <relationshipName>Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Users__c</fullName>
        <label># of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Expense</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>of_Users__c</columns>
        <columns>Billing_Intervals__c</columns>
        <columns>Date_Started__c</columns>
        <columns>Monthly_Cost_Per_User__c</columns>
        <columns>Pmt_Method__c</columns>
        <columns>Monthly_Cost__c</columns>
        <columns>Type__c</columns>
        <columns>Vendor__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Test_Expenses</fullName>
        <filterScope>Queue</filterScope>
        <label>Test</label>
        <queue>Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>